[package]
name = "algo_eventer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio ={ version = "1.24.2",features = ["full","time"] }
hyper = {version = "0.14.23",features = ["full"]}
hyper-openssl = "0.9.2"
rocket = { version = "0.5.0-rc.2"}
serde = {version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
config = "0.13.3"
lazy_static = "1.4.0"